k8s/manifests/navidrome/old-k8s/navidrome-filebrowser/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome-filebrowser

spec:
  routes:
  - kind: Rule
    match: Host(`navidrome-filebrowser.harvestasya.org`)
    priority: 10
    services:
    - name: external-navidrome
      port: 4533

    middlewares:
    - name: auto-detect-content-type
      namespace: traefik
    - name: authentik-forward-auth
      namespace: authentik

  - kind: Rule
    match: Host(`navidrome-filebrowser.harvestasya.org`) && PathPrefix(`/outpost.goauthentik.io/`)
    priority: 15
    services:
    - name: authentik-server
      namespace: authentik
      port: http
